--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@ a:active {
     <div>
         <h1>Иван Голованов</h1>
         <h2> Преобразование в MathML</h2>
-    <a href="/Math/index.xml" class="btn"> Ссылка на задание</a>
+    <a href="./Math/index.xml" class="btn"> Ссылка на задание</a>
     <h2>SVG Преобразование</h2>
-    <a href="/SVG/index.xml" class="'btn">Ссылка на задание</a>
+    <a href="./SVG/index.xml" class="'btn">Ссылка на задание</a>
     </div>
 
 </body>
